--- a/app/src/main/res/layout/ayuda_integracion_layout.xml
+++ b/app/src/main/res/layout/ayuda_integracion_layout.xml
@@ -21,4 +21,31 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/imageButton"
+        android:layout_centerHorizontal="true">
+
+        <ScrollView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/scrollView4"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true" >
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:text="@string/tips_jugar"
+                android:textStyle="bold"
+                android:id="@+id/textView23"
+                android:layout_below="@+id/scrollView4"
+                android:layout_centerHorizontal="true"
+                android:gravity="center_horizontal" />
+        </ScrollView>
+
+    </RelativeLayout>
+
 </RelativeLayout>
