--- a/app/src/main/res/layout/inicio_layout.xml
+++ b/app/src/main/res/layout/inicio_layout.xml
@@ -2,22 +2,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="match_parent"
 
-    android:background="@drawable/registro2">
+    android:background="#bb1717">
 
-
-
-
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/imageView"
-        android:src="@drawable/bulldog"
-        android:visibility="visible"
-        android:foregroundGravity="top"
-        android:layout_marginBottom="112dp"
-        android:layout_alignBottom="@+id/imageView4"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
 
     <EditText
         android:layout_width="176dp"
